<resources>
    <string name="app_name">CloneMessenger</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="ch_language">Change Language</string>
    <string name="ch_interface_color">Change Interface Color</string>
    <string name="ch_userName">Change user name</string>
    <string name="ch_userPhoto">Change user photo</string>
    <string name="chats">Chat</string>
    <string name="contacts">Contacts</string>
    <string name="Settings">Settings</string>
    <string name="ch_userNameE">Enter a new username</string>
    <string name="save">Save</string>
    <string name="changePhoto">Photo change in progress</string>
    <string name="removeAds">Buy version without ads</string>
    <string name="fullVersion">Full version</string>
    <string name="unlockFullVersion">Version without ads unlocked</string>
    <string name="english">English</string>
    <string name="polish">Polish</string>
    <string name="red">Red</string>
    <string name="purple">Purple</string>
    <string name="chooseL">Choose language</string>
    <string name="chooseC">Choose theme color</string>
    <string name="loginToUse">Log in to be able to use the application</string>
    <string name="welcome">Welcome in CloneMessanger App</string>
    <string name="welcome1">Welcome</string>
    <string name="chatName">Chat name</string>
    <string name="description">Description</string>
    <string name="chatPhoto">Photo (click to change)</string>
    <string name="uploadPhoto">Set photo in progress</string>
    <string name="createChat">Create a new chat</string>
    <string name="addUserToChat">Add user to chat</string>
    <string name="addPerson">Add person</string>
    <string name="lastOnline">Last online: </string>
</resources>
